<?xml version="1.0"?>
<package>
  <name>lar_bonmet</name>
  <version>0.0.0</version>
  <description>LAR Bonmet Package</description>

  <maintainer email="degregorio.daniele@gmail.com">daniele de gregorio</maintainer>

  <license>BSD</license>

  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>lar_tools</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>lar_tools</run_depend>
  <!-- <run_depend>orocos_kdl</run_depend> -->

  <export></export>
</package>
